style: stylized page and post

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,9 @@
 // TODO
+.headerLogo {
+  display: flex;
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 10rem;
+  height: 7rem;
+  align-items: center;
+}
