--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,33 @@
-// TODO
+.contentContainer {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 10rem;
+  height: calc(100vh - 5rem);
+
+  .hero {
+    display: block;
+
+    div:not(:first-child) {
+      margin-top: 3rem;
+    }
+
+    p {
+      margin-top: 0.5rem;
+      color: var(--body);
+    }
+
+    section {
+      margin-top: 0.7rem;
+      span {
+        margin-left: 3rem;
+      }
+      color: var(--info);
+    }
+  }
+  a {
+    display: block;
+    margin-top: 4rem;
+    text-decoration: none;
+    color: var(--highlight);
+  }
+}
