--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,28 +1,63 @@
-// TODO
-
 .banner {
   width: 100%;
-}
-.containerContent {
-  max-width: 1120px;
-  margin: 5rem auto 0;
-  padding: 0 10rem;
-  border: solid blue;
+  height: 400px;
 }
 
-.containerSection {
+.postContainer {
+  max-width: 720px;
+  margin: 3rem auto;
+
+  strong {
+    font-size: 3.2rem;
+    font-weight: 700;
+  }
+}
+
+.postInfo {
+  margin-top: 0.7rem;
+  color: var(--gray-300);
   display: flex;
   align-items: center;
-  margin-bottom: 3rem;
-  img {
-    margin-right: 0.5rem;
+
+  time {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+
+    svg {
+      margin-right: 0.4rem;
+    }
   }
-  border: solid gray;
-  margin-top: 1.5rem;
 
   span {
     display: flex;
     align-items: center;
-    margin: 0 3rem;
+    margin-right: 1rem;
+
+    svg {
+      margin-right: 0.4rem;
+    }
+  }
+}
+
+.postContent {
+  margin-top: 3rem;
+  max-width: 720px;
+
+  div {
+    margin-top: 2rem;
+    max-width: 720px;
+  }
+
+  strong {
+    font-size: 2.2rem;
+    color: var(--gray-50);
+  }
+
+  p {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    text-align: justify;
+    color: var(--gray-300);
   }
 }
